import {fieldset} from '../src';

describe('fieldset', () => {
    it('renders with children', () => {
        expect(fieldset({}, 'TEST')).toMatchSnapshot();
    });
    
    it('renders arrays of children', () => {
        expect(fieldset({}, Array(10).fill('TEST'))).toMatchSnapshot();
    });

    it('renders with empty attributes', () => {
        expect(fieldset({})).toMatchSnapshot();
    });

    it('renders without attributes', () => {
        expect(fieldset()).toMatchSnapshot();
    });

    it('renders with accessKey="a,b,c,d"', () => {
        expect(fieldset({accessKey: "a,b,c,d"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="on"', () => {
        expect(fieldset({autoCapitalize: "on"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="off"', () => {
        expect(fieldset({autoCapitalize: "off"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="none"', () => {
        expect(fieldset({autoCapitalize: "none"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="sentences"', () => {
        expect(fieldset({autoCapitalize: "sentences"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="words"', () => {
        expect(fieldset({autoCapitalize: "words"})).toMatchSnapshot();
    });

    it('renders with autoCapitalize="characters"', () => {
        expect(fieldset({autoCapitalize: "characters"})).toMatchSnapshot();
    });

    it('renders with className="foo bar baz"', () => {
        expect(fieldset({className: "foo bar baz"})).toMatchSnapshot();
    });

    it('renders with contentEditable="true"', () => {
        expect(fieldset({contentEditable: "true"})).toMatchSnapshot();
    });

    it('renders with contentEditable="false"', () => {
        expect(fieldset({contentEditable: "false"})).toMatchSnapshot();
    });

    it('renders with dir="ltr"', () => {
        expect(fieldset({dir: "ltr"})).toMatchSnapshot();
    });

    it('renders with dir="rtl"', () => {
        expect(fieldset({dir: "rtl"})).toMatchSnapshot();
    });

    it('renders with dir="auto"', () => {
        expect(fieldset({dir: "auto"})).toMatchSnapshot();
    });

    it('renders with draggable="true"', () => {
        expect(fieldset({draggable: "true"})).toMatchSnapshot();
    });

    it('renders with draggable="false"', () => {
        expect(fieldset({draggable: "false"})).toMatchSnapshot();
    });

    it('renders with hidden=true', () => {
        expect(fieldset({hidden: true})).toMatchSnapshot();
    });

    it('renders with hidden=false', () => {
        expect(fieldset({hidden: false})).toMatchSnapshot();
    });

    it('renders with id="TEST"', () => {
        expect(fieldset({id: "TEST"})).toMatchSnapshot();
    });

    it('renders with inputMode="none"', () => {
        expect(fieldset({inputMode: "none"})).toMatchSnapshot();
    });

    it('renders with inputMode="text"', () => {
        expect(fieldset({inputMode: "text"})).toMatchSnapshot();
    });

    it('renders with inputMode="tel"', () => {
        expect(fieldset({inputMode: "tel"})).toMatchSnapshot();
    });

    it('renders with inputMode="email"', () => {
        expect(fieldset({inputMode: "email"})).toMatchSnapshot();
    });

    it('renders with inputMode="url"', () => {
        expect(fieldset({inputMode: "url"})).toMatchSnapshot();
    });

    it('renders with inputMode="numeric"', () => {
        expect(fieldset({inputMode: "numeric"})).toMatchSnapshot();
    });

    it('renders with inputMode="decimal"', () => {
        expect(fieldset({inputMode: "decimal"})).toMatchSnapshot();
    });

    it('renders with inputMode="search"', () => {
        expect(fieldset({inputMode: "search"})).toMatchSnapshot();
    });

    it('renders with is="foo"', () => {
        expect(fieldset({is: "foo"})).toMatchSnapshot();
    });

    it('renders with itemID="https://google.com/"', () => {
        expect(fieldset({itemID: "https://google.com/"})).toMatchSnapshot();
    });

    it('renders with itemProp="https://google.com/"', () => {
        expect(fieldset({itemProp: "https://google.com/"})).toMatchSnapshot();
    });

    it('renders with itemRef="foo bar"', () => {
        expect(fieldset({itemRef: "foo bar"})).toMatchSnapshot();
    });

    it('renders with itemScope=true', () => {
        expect(fieldset({itemScope: true})).toMatchSnapshot();
    });

    it('renders with itemScope=false', () => {
        expect(fieldset({itemScope: false})).toMatchSnapshot();
    });

    it('renders with itemType="https://google.com/"', () => {
        expect(fieldset({itemType: "https://google.com/"})).toMatchSnapshot();
    });

    it('renders with lang="es-419"', () => {
        expect(fieldset({lang: "es-419"})).toMatchSnapshot();
    });

    it('renders with lang=""', () => {
        expect(fieldset({lang: ""})).toMatchSnapshot();
    });

    it('renders with slot="TEST"', () => {
        expect(fieldset({slot: "TEST"})).toMatchSnapshot();
    });

    it('renders with spellCheck="true"', () => {
        expect(fieldset({spellCheck: "true"})).toMatchSnapshot();
    });

    it('renders with spellCheck="false"', () => {
        expect(fieldset({spellCheck: "false"})).toMatchSnapshot();
    });

    it('renders with style={"color":"#000000"}', () => {
        expect(fieldset({style: {"color":"#000000"}})).toMatchSnapshot();
    });

    it('renders with tabIndex=1', () => {
        expect(fieldset({tabIndex: 1})).toMatchSnapshot();
    });

    it('renders with title="TEST"', () => {
        expect(fieldset({title: "TEST"})).toMatchSnapshot();
    });

    it('renders with translate="yes"', () => {
        expect(fieldset({translate: "yes"})).toMatchSnapshot();
    });

    it('renders with translate="no"', () => {
        expect(fieldset({translate: "no"})).toMatchSnapshot();
    });

    it('renders with disabled=true', () => {
        expect(fieldset({disabled: true})).toMatchSnapshot();
    });

    it('renders with disabled=false', () => {
        expect(fieldset({disabled: false})).toMatchSnapshot();
    });

    it('renders with form="TEST"', () => {
        expect(fieldset({form: "TEST"})).toMatchSnapshot();
    });

    it('renders with name="TEST"', () => {
        expect(fieldset({name: "TEST"})).toMatchSnapshot();
    });
});